kubernetes/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: fashionhaven-frontend
  labels:
    app: fashionhaven-frontend
spec:
  type: LoadBalancer
  selector:
    app: fashionhaven-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
