kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: fashionhaven-backend
        labels:
              app: fashionhaven-backend
              spec:
                  type: NodePort
                      selector:
                            app: fashionhaven-backend
                                ports:
                                      - protocol: TCP
                                              port: 80
                                                      targetPort: 5000
                                                              nodePort: 32000
