kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fashionhaven-frontend-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    # Uncomment the line below if using cert-manager for HTTPS
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: www.dineshk8s.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fashionhaven-frontend-service
                port:
                  number: 80
  tls:
    - hosts:
        - www.dineshk8s.xyz
      secretName: fashionhaven-frontend-tls
